--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ rvm:
 branches:
   only:
     - master
+
+addons:
+  code_climate:
+    repo_token: 4c822723535747ce3f984b634061775b98ed8cc49dc4537cf1a9e52149502657
