--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   pre:
-    - sh ./ci/circleci/ruby_version.sh
+    - case $CIRCLE_NODE_INDEX in 0) rvm use 2.0.0 --default ;; 1) rvm use 1.9.3 --default ;; esac:
 test:
   override:
     - ruby -v ; bundle exec rspec: {parallel: true}
